--- a/src/components/Expenses/ExpenseDate.css
+++ b/src/components/Expenses/ExpenseDate.css
@@ -3,7 +3,9 @@
     flex-direction: column;
     width: 5.5rem;
     height: 5.5rem;
-    border: 1px solid #ececec;
+    border: 1px;
+    border-style: solid;
+    border-color: azure;
     background-color: #2a2a2a;
     color: white;
     border-radius: 12px;
